--- a/pom.xml
+++ b/pom.xml
@@ -26,14 +26,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.fatboyindustrial.logback-raygun</groupId>
+  <groupId>com.rocketmiles.logback-raygun</groupId>
   <artifactId>logback-raygun</artifactId>
-  <version>1.5.0-SNAPSHOT</version>
+  <version>1.5.2</version>
   <packaging>jar</packaging>
 
   <name>logback-raygun</name>
   <description>A logback appender that emits details to raygun.io.</description>
-  <url>https://github.com/gkopff/logback-raygun</url>
+  <url>https://github.com/rocketmiles/logback-raygun</url>
 
   <licenses>
     <license>
@@ -43,18 +43,10 @@
   </licenses>
 
   <scm>
-    <url>https://github.com/gkopff/logback-raygun</url>
-    <connection>scm:git:https://github.com/gkopff/logback-raygun.git</connection>
-    <developerConnection>scm:git:git@github.com:gkopff/logback-raygun.git</developerConnection>
+    <url>https://github.com/rocketmiles/logback-raygun</url>
+    <!--<connection>scm:git:https://github.com/gkopff/logback-raygun.git</connection>-->
+    <!--<developerConnection>scm:git:git@github.com:gkopff/logback-raygun.git</developerConnection>-->
   </scm>
-
-  <developers>
-    <developer>
-      <id>gkopff</id>
-      <name>Greg Kopff</name>
-      <timezone>+10</timezone>
-    </developer>
-  </developers>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -142,17 +134,14 @@
   </profiles>
 
   <distributionManagement>
-    <snapshotRepository>
-      <id>sonatype-nexus-snapshots</id>
-      <name>Sonatype Nexus snapshot repository</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
     <repository>
-      <id>sonatype-nexus-staging</id>
-      <name>Sonatype Nexus release repository</name>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+      <id>rocketmiles-release</id>
+      <name>Rocketmiles release repository</name>
+      <url>https://rocketmiles.jfrog.io/rocketmiles/libs-release-local</url>
     </repository>
   </distributionManagement>
+
+
 
   <dependencies>
     <dependency>                               <!-- JUnit -->
